--- a/css/media.css
+++ b/css/media.css
@@ -55,6 +55,7 @@
     display: block;
     overflow: auto;
     transition: all 0.2s;
+    z-index: 1;
     }
     .nav__item.active {
         top: 0;
