--- a/css/media.css
+++ b/css/media.css
@@ -48,7 +48,7 @@
     padding: 60px 30px;
     position: fixed;
     top: -100%;
-    left: 0;
+    right: 0;
     width: 100%;
     height: 100%;
     background-color: #FFFFFF;
