--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url(./normalize.css);
+@import url("./normalize.css");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 
 :root {
@@ -96,7 +96,9 @@ a {
   flex-wrap: wrap;
   column-gap: 50px;
 }
-
+.animate__animated:active {
+  animation-name: animate__fadeIn;
+}
 .header__nav {
   display: flex;
 }
@@ -126,7 +128,7 @@ a {
   width: 100%;
   height: 4px;
   background-color: #000000;
-  transition: all 0.1s;
+  transition: all 0.3s;
 }
 .burger::after {
   bottom: 0;
@@ -174,7 +176,12 @@ a {
   font-weight: var(--normal);
   line-height: 28px;
   margin: 20px 0 0 0;
+  display: -webkit-box;
+  -webkit-line-clamp: 10;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
+
 .advantage__portrait {
   max-width: 494px;
   height: auto;
