--- a/css/hover-min.css
+++ b/css/hover-min.css
@@ -1,5 +1,5 @@
-.hvr-float-shadow {
-    /* display: inline-block; */
+/* .hvr-float-shadow {
+    display: inline-block;
     vertical-align: middle;
     -webkit-transform: perspective(1px) translateZ(0);
     transform: perspective(1px) translateZ(0);
@@ -42,5 +42,5 @@
     opacity: 1;
     -webkit-transform: translateY(2px);
     transform: translateY(2px)
-}
+} */
 
